# pizza-time

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  .releaserc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  alembic.ini  noxfile.py  pizza.db  pyproject.toml  setup.py
.github/: .cookiecutter.json  CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  labeler.yml  pr-title-check.yml  release.yml  semantic_release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/dfizza/: __init__.py  deps.py  main.py
src/dfizza/migrations/: README  env.py
src/dfizza/migrations/versions/: 28fbdabae9c6_create_pizza_models.py  3570b84d86f5_create_pizza_models.py  42f929f01266_unique_recipes.py  68820172920a_update_dough_ingredients.py  84db6a3f0620_initial_tables.py  91596e13a07d_create_pizza_models.py  a3decd80e456_rename_flour_model.py  e883b52bffc1_initial_tables.py  fd2614db813c_create_pizza_models.py
src/dfizza/models/: pizza.py
src/dfizza/routers/: pizza.py  ui.py
tests/: __init__.py  test_core.py  test_main.py
web/htmx/: index.html
web/vite-react/: index.html  package-lock.json  package.json  vite.config.ts
web/vite-react/src/: App.css  App.tsx
web/vite-react/src/components/: AddForm.tsx  DataTable.tsx  EditRow.tsx  FieldDef.ts  FormFields.tsx  Navbar.tsx  ResourcePage.tsx
web/vite-react/src/components/doughRecipe/: IngredientsTable.tsx  PercentagesTable.tsx
web/vite-react/src/pages/: DoughRecipeDetails.tsx
web/vite-react/src/schemas/: doughRecipe.ts
