[project]
name = "dfizza"
version = "1.1.0"
description = "dFizza"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "dfox3", email = "fox.dylan92@gmail.com"},
]
classifiers = [
  "Development Status :: 1 - Planning",
]

dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "click >=8.0.1",
    "fastapi[standard]>=0.136.3",
    "nox",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
]


[project.urls]
Homepage = "https://github.com/dfox3/dfizza"
Repository = "https://github.com/dfox3/dfizza"
Documentation = "https://dfizza.readthedocs.io"
Changelog = "https://github.com/dfox3/dfizza/releases"

[dependency-groups]
dev = [
  "coverage[toml] >= 7.6",
  "pre-commit >= 4.0",
  "pre-commit-hooks >= 5.0",
  "pytest >= 8.3",
  "pytest-cov >= 5.0",
  "pytest-mock >= 3.14",
  "pytest-xdist >= 3.6",
  "pytest-randomly >= 3.15",
  "pygments >= 2.18",
  "prek>=0.4.4",
  "pyupgrade>=3.21.2",
]
lint = [
  "ruff >= 0.8",
  "pydoclint >= 0.5.0",
  "zizmor >= 1.20",
]
docs = [
  "shibuya >= 2025.1.29",
  "sphinx >= 8.0",
  "sphinx-autobuild >= 2024.10",
  "sphinx-click >= 6.0",
  "myst-parser >= 4.0",
]
mypy = [
  "mypy >= 1.13"
]
ty = [
  "ty >= 0.0.1"
]
typeguard = [
  "typeguard >= 4.4"
]
xdoctest = [
  "xdoctest[colors] >= 1.2"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[project.scripts]
dfizza = "dfizza.__main__:main"

[build-system]
# When using mypyc, you must list all dependencies used by the compiled
# modules here. Otherwise, mypyc will not be able to see the types of the
# dependencies, and the compilation will fail.
requires = [
    "setuptools>=61.0",
    "mypy>=1.0",
]
build-backend = "setuptools.build_meta"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["dfizza", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.ruff]
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = [
  "ASYNC", # flake8-async
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "C90",  # mccabe
  "D",    # pydocstyle
  "E",    # pycodestyle
  "F",    # pyflakes
  "FURB", # refurb
  "I",    # isort
  "LOG",  # flake8-logging
  "N",    # pep8-naming
  "PERF", # perflint
  "PIE",  # flake8-pie
  "PTH",  # flake8-use-pathlib
  "RET",  # flake8-return
  "RUF",  # Ruff-specific rules
  "S",    # flake8-bandit
  "SIM",  # flake8-simplify
  "TRY",  # tryceratops
  "UP",   # pyupgrade
  "W",    # pycodestyle
]
ignore = [
  "COM812",
  "COM819",
  "D107",  # undocumented-public-init conflicts with DOC301
  "D206",
  "D300",
  "E111",
  "E114",
  "E117",
  "ISC001",
  "ISC002",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "W191",
]

[tool.ruff.lint.per-file-ignores]
"*/test_*.py" = ["S101"]
"noxfile.py" = ["S101"]
"**/conftest.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pydoclint]
style = 'google'
exclude = '\.git|\.nox|noxfile.py'
arg-type-hints-in-docstring = false

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
